# KruptLinux

./: .gitignore  CMakeLists.txt  Krupt.cpp  README.md
Daemon/: Daemon.hpp
Daemon/DaemonComponents/: Banner.hpp  daemonThread.hpp
command/: commands.hpp
command/commandAssets/: commandAssets.hpp
